RESOLVED FIXED118855
ASSERT(!m_useCount) fails in NetworkProcess at SandboxExtension::~SandboxExtension
https://bugs.webkit.org/show_bug.cgi?id=118855
Summary ASSERT(!m_useCount) fails in NetworkProcess at SandboxExtension::~SandboxExte...
Alexey Proskuryakov
Reported 2013-07-18 10:58:08 PDT
We don't invalidate sandbox extensions when aborting a load. <rdar://problem/13826348>
Attachments
proposed fix (5.35 KB, patch)
2013-07-18 11:25 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2013-07-18 11:25:23 PDT
Created attachment 207003 [details] proposed fix
Alexey Proskuryakov
Comment 2 2013-07-18 13:38:02 PDT
Note You need to log in before you can comment on or make changes to this bug.